# crawlhub

./: .gitignore  build_pyd.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
crawlhub/: __init__.py  __main__.py  _version.py
crawlhub/.github/workflows/: build.yml
crawlhub/api/: app.py  routes.py
crawlhub/cli/: __init__.py  _utils.py  main.py  mcp_server.py
crawlhub/cli/commands/: __init__.py  _bulk.py  batch.py  cookie.py  daemon.py  favorite.py  init.py  log.py  misc.py  notify.py  plan.py  platform.py  stealth.py  task.py  throttle.py
crawlhub/client/: __init__.py  client.py
crawlhub/core/: __init__.py  _telemetry_ctx.py  artifact_resolver.py  batch.py  blob_store.py  config.py  cookie_converters.py  cookie_dispatcher.py  cookie_override.py  cookie_resolver.py  cookies.py  daemon.py  ensure_daemon.py  failure_detector.py  flux.py  interfaces.py  login_detectors.py  models.py  notifications.py  param_snapshot.py  plan_runtime.py  plan_scheduler.py  plugin_manifest.py  registry.py  request_gate.py  scheduler.py  shape_validator.py  sql_errors.py  sql_runner.py  sql_validator.py  sqlite_store.py  state_machine.py  task_context.py  telemetry.py  time_template.py
crawlhub/core/browser/: __init__.py  cookie_injection.py  fingerprint_audit.py  handle.py  host_environment.py  playwright_runtime.py  provider.py  runner.py  session.py  session_key.py  session_manager.py
crawlhub/core/browser/_stealth/: stealth_override.js
crawlhub/core/observability/: README.md  __init__.py  cdp_recorder.py  http_patches.py  install.py  records.py  writer.py
crawlhub/core/platform/: __init__.py  base_client.py  base_models.py  base_service.py  cookie_jar.py  file_cookie_jar.py  multi_token_cookie_jar.py  probe_protocol.py  runtime_service.py
crawlhub/crawlers/: README.md
crawlhub/crawlers/bilibili/: plugin.yaml  service.py
crawlhub/crawlers/bilibili/crawler/: __init__.py  client.py  models.py  (+1 more)
crawlhub/crawlers/douyin/: plugin.yaml  service.py
crawlhub/crawlers/kuaishou/: plugin.yaml  service.py
crawlhub/crawlers/qimai/: plugin.yaml  service.py
crawlhub/crawlers/steam/: plugin.yaml  service.py
crawlhub/crawlers/weibo/: plugin.yaml  service.py
crawlhub/frontend/: index.html  quark_ring.html
crawlhub/scaffolding/: __init__.py  startplatform.py
crawlhub/scaffolding/templates/: README.md.tpl  __init__.py  __init__.py.tpl  plugin.yaml.tpl  service.py.tpl
crawlhub/scripts/: __init__.py  verify_crawlers.py
scripts/: check_version.py  upload_to_cos.py
(+56 files in other folders)
